--- a/project/src/imgui.ini
+++ b/project/src/imgui.ini
@@ -9,12 +9,17 @@ Size=198,71
 Collapsed=0
 
 [Window][G Buffer Inspector]
-Pos=763,517
+Pos=768,5
 Size=421,361
 Collapsed=0
 
 [Window][Configurator]
-Pos=30,728
-Size=719,157
+Pos=5,665
+Size=708,227
+Collapsed=0
+
+[Window][Frame Info]
+Pos=6,14
+Size=239,93
 Collapsed=0
 
